--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -40,3 +40,38 @@
 .read-the-docs {
   color: #888;
 }
+
+header { 
+  background-color: aquamarine;
+  padding: 10px;
+  color: white;
+}
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h1 {
+   margin: 0;
+}
+
+.nav-tabs {
+  background-color: purple;
+}
+
+.nav-tabs a { 
+  text-decoration: none;
+}
+
+footer {
+  background-color: aquamarine;
+  height: 10vh;
+width: 100%;
+
+}
+
+/* .footer-content { 
+
+} */
