--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -1,3 +1,4 @@
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,19 +12,27 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #B787D2;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #B787D2;
 }
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -60,9 +69,9 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #B787D2;
   }
-  button {
+  /* button {
     background-color: #f9f9f9;
-  }
+  } */
 }
