--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -1,4 +1,3 @@
-
 #root {
   max-width: 100%;
   margin: 0 auto;
@@ -12,6 +11,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 /* .logo {
   height: 6em;
   padding: 1.5em;
@@ -52,9 +52,9 @@ header {
   width: 100%;
 }
 
-.header { 
+.header {
   background-color: #635CA0;
-  height:80px;
+  height: 80px;
   color: #B787D2;
 }
 
@@ -68,8 +68,8 @@ header {
 }
 
 .header h1 {
-   margin: 10px;
-   text-align: center;
+  margin: 10px;
+  text-align: center;
 }
 
 .nav-tabs {
@@ -78,7 +78,7 @@ header {
   border: none;
 }
 
-.nav-tabs a { 
+.nav-tabs a {
   text-decoration: none;
   color: black;
 
@@ -86,17 +86,17 @@ header {
 
 
 footer {
-  background-color: #635CA0;
+
   height: 10vh;
-width: 100%;
-padding: 10px;
-display: flex;
-justify-content: center;
-align-items: center;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 
-main { 
+main {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -115,4 +115,44 @@ main {
   margin-top: 5px;
   margin-bottom: 5px;
   width: 100%;
+}
+
+.repo-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px;
+  padding: 20px;
+}
+
+.repo-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.repo-image {
+  height: 150px;
+  width: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  transition: transform 0.3s;
+}
+
+.repo-image:hover {
+  transform: scale(1.05);
+}
+
+.repo-name {
+  opacity: 1;
+  transition: opacity 0.3s;
+  position: absolute;
+}
+
+.repo-card:hover .repo-image span {
+  color: #B787D2;
 }
