--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 100%;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
   background-color: #97C7DB;
 }
@@ -12,59 +12,24 @@
   box-sizing: border-box;
 }
 
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
-header {
-  width: 100%;
-}
-
 .header {
   background-color: #635CA0;
   height: 80px;
   color: #B787D2;
+  padding: 0 10px;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
 }
 
 .header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 20px;
+  width: 100%;
 }
 
 .header h1 {
@@ -73,35 +38,50 @@ header {
 }
 
 .nav-tabs {
-  padding: 10px;
-  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+  /* align-items: center; */
   border: none;
 }
 
 .nav-tabs a {
   text-decoration: none;
   color: black;
-
-}
-
-
-footer {
-
-  height: 10vh;
-  width: 100%;
+  flex: 1;
+  text-align: center;
   padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
 }
 
-/* main {
+html,
+body {
+  min-height: 100vh;
+  margin: 0;
+}
+
+body {
+  background-color: #97C7DB;
   display: flex;
+  flex-direction: column;
+}
+
+.container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-} */
-.main-content{
+}
+
+.main-content {
   flex: 1;
   display: flex;
   justify-content: center;
@@ -113,8 +93,37 @@ footer {
   margin: 10px;
 }
 
+.footer {
+
+  height: 200px;
+  width: 100%;
+  /* padding: 10px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.footer li {
+  margin-left: 10px;
+
+}
+
+.footer a {
+  color: #635CA0
+}
+
+.footer a:hover {
+  color: #333565
+}
+
+.contact { 
+  width: 70%;
+}
 .form {
   margin: 20px;
+  width: 100%;
+  align-self: center;
 }
 
 .form input {
@@ -122,6 +131,16 @@ footer {
   margin-top: 5px;
   margin-bottom: 5px;
   width: 100%;
+  height: 30px;
+}
+
+.form button {
+background-color: #333565;
+color:#97C7DB;
+border-radius: 5px;
+font-weight: bold;
+padding: 5px;
+
 }
 
 .repo-grid {
@@ -167,8 +186,26 @@ footer {
 .resume h1 {
   margin-top: 20px;
 }
+
 .resume-list {
-list-style-type: none;
-padding: 0;
-margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .header-content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav-tabs {
+    width: 100%;
+    text-align: center;
+  }
 }
